# DebrisPy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
debrispy/: __init__.py  asd.py  eccentricity.py  geometry.py  kernel.py  montecarlo.py  sigma_a.py
docs/source/: api_reference.rst  asd.ipynb  benchmarks.rst  builtin_ecc_distribution.ipynb  conf.py  custom_ecc_distribution.ipynb  debrispy.rst  index.rst  kernel.ipynb  modules.rst  monte_carlo.ipynb  package_design.rst  quick_start.rst  sigma_a.ipynb  theory.rst  unique_ecc.ipynb
docs/source/_autosummary/: debrispy.asd.rst  debrispy.eccentricity.rst  debrispy.geometry.rst  debrispy.kernel.rst  debrispy.montecarlo.rst  debrispy.sigma_a.rst
examples/docs_notebooks/: README.md  asd.ipynb  builtin_ecc_distribution.ipynb  custom_ecc_distribution.ipynb  monte_carlo.ipynb  sigma_a.ipynb  unique_ecc.ipynb
tests/: test_asd.py  test_eccentricity.py  test_kernel.py  test_montecarlo.py  test_sigma_a.py
