[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debrispy"
version = "0.1.1"
description = "Debris disc surface density modeling and Monte Carlo sampling."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Deniz Akansoy", email = "da619@cam.ac.uk" }
]

keywords = [
    "astronomy",
    "astrophysics",
    "debris discs",
    "debris disks",
    "surface density",
    "monte carlo",
    "orbital dynamics"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.7.5",
    "tqdm>=4.67.1",
    "fast_histogram>=0.14",
    "joblib>=1.5.1",
    "adaptive>=1.3.2"
]

license = { file = "LICENSE" }

[project.optional-dependencies]

dev = [
    "pytest>=8",
    "ipykernel",
    "notebook"
]

docs = [
    "sphinx>=6",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "ipykernel"
]

[tool.setuptools]
packages = ["debrispy"]